fix postTime align text

--- a/src/Styles/post-temp.scss
+++ b/src/Styles/post-temp.scss
@@ -2,6 +2,7 @@
 
 .post-temp-container {
   @include flexCenter(column);
+  text-align: start;
   align-items: flex-start;
   padding: 15px;
   margin-top: 15px;
